# Infra-hub

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile-base  Dockerfile-dev  Dockerfile.dev  README.md  config_example.yml  docker-compose-dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  setup-dev.sh  xadmin.sh
.devcontainer/: docker-compose.yml
.github/workflows/: build-base-image.yml  build-image.yml  issue-close-require.yml  issue-close.yml  issue-open.yml  release-drafter.yml
apps/captcha/: apps.py  helpers.py  models.py  tasks.py  urls.py  utils.py  views.py
apps/captcha/migrations/: 0001_initial.py
apps/common/: apps.py  decorators.py  notifications.py  serializers.py  signal_handlers.py  startup.py  tasks.py  urls.py
apps/common/api/: common.py
apps/common/base/: magic.py  utils.py
apps/common/cache/: channel.py  redis.py  state.py  storage.py
apps/common/celery/: decorator.py  flower.py  heatbeat.py  logger.py  utils.py
apps/common/core/: auth.py  config.py  exception.py  fields.py  filter.py  middleware.py  models.py  modelset.py  pagination.py  permission.py  response.py  routers.py  serializers.py  throttle.py  utils.py  validators.py
apps/common/drf/: __init__.py  const.py  metadata.py
apps/common/fields/: __init__.py  char.py  encrypted.py  image.py  utils.py
apps/common/migrations/: 0001_initial.py
apps/common/swagger/: utils.py  views.py
apps/common/utils/: common.py  connection.py  country.py  crypto.py  file.py  media.py  pending.py  random.py  request.py  timezone.py  token.py  verify_code.py
apps/demo/: config.py  models.py  urls.py  views.py
apps/demo/serializers/: book.py
apps/message/: base.py  notify.py  routing.py  utils.py
apps/notifications/: apps.py  message.py  notifications.py  signal_handlers.py  urls.py
apps/notifications/backends/: __init__.py  email.py  site_msg.py  sms.py
apps/notifications/migrations/: 0001_initial.py  0002_initial.py
apps/notifications/models/: message.py  notification.py
apps/notifications/serializers/: message.py  notifications.py
apps/notifications/views/: message.py  notifications.py  user_site_msg.py
apps/settings/: apps.py  models.py  signal_handlers.py  urls.py
apps/settings/migrations/: 0001_initial.py  0002_initial.py
apps/settings/serializers/: basic.py  email.py  security.py  setting.py  sms.py
apps/settings/utils/: password.py  security.py
apps/settings/views/: basic.py  block_ip.py  email.py  security.py  settings.py  sms.py
apps/system/: apps.py  notifications.py  signal_handler.py  tasks.py  urls.py
apps/system/migrations/: 0001_initial.py  0002_operationlog_exec_time_operationlog_request_uuid.py  0003_userloginlog_channel_name_and_more.py
apps/system/models/: abstract.py  config.py  department.py  field.py  log.py  menu.py  permission.py  role.py  upload.py  user.py
apps/system/serializers/: config.py  department.py  field.py  log.py  menu.py  permission.py  role.py  route.py  upload.py  user.py  userinfo.py
apps/system/utils/: auth.py  ctasks.py  menu.py  modelfield.py  modelset.py
apps/system/views/: configs.py  dashboard.py  routes.py
apps/virt_center/: apps.py  decorators.py  filters.py  notifications.py  signal.py  signal_handlers.py  tasks.py  urls.py
apps/virt_center/migrations/: 0001_initial.py  0002_alter_platformcredential_password_and_more.py
apps/virt_center/models/: __init__.py  host.py  monitor.py  operation.py  platform.py  storage.py  template.py  vm.py
apps/virt_center/serializers/: __init__.py  credential.py  host.py  hosts.py  (+2 more)
docs/: CONTRIBUTING.md  data-permission.md  development.md  field-permission.md  installation.md  pre-commit-guide.md  virt-center-guide.md  xadmin-README.md
loadjson/: datapermission.json  deptinfo.json  fieldpermission.json  menu.json  menumeta.json  modellabelfield.json  systemconfig.json  userinfo.json  userrole.json
server/: asgi.py  celery.py  conf.py  const.py  logging.py  middleware.py  urls.py  utils.py
server/settings/: base.py  custom.py  libs.py  logging.py  setting.py
utils/: clean_migrations.sh  init_data.py  nginx.conf
(+84 files in other folders)
