[project]
name = "infra-hub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==24.1.0",
    "alibabacloud-dysmsapi20170525==4.2.0",
    "celery==5.5.3",
    "channels==4.3.1",
    "channels-redis==4.3.0",
    "chardet==5.2.0",
    "daphne==4.2.1",
    "django==5.2.7",
    "django-celery-beat==2.8.1",
    "django-celery-results==2.6.0",
    "django-cors-headers==4.9.0",
    "django-filter==25.2",
    "django-imagekit==6.0.0",
    "django-proxy==1.3.0",
    "django-ranged-response==0.2.0",
    "django-redis==6.0.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-spectacular==0.28.0",
    "drf-spectacular-sidecar==2025.10.1",
    "flower==2.0.1",
    "geoip2==5.1.0",
    "gunicorn==23.0.0",
    "html2text==2025.4.15",
    "ipip-ipdb==1.6.1",
    "mysqlclient==2.2.7",
    "openpyxl==3.2.0b1",
    "phonenumbers==9.0.16",
    "pilkit==3.0",
    "psutil==7.1.1",
    "psycopg2-binary==2.9.11",
    "pycountry==24.6.1",
    "pycryptodomex==3.23.0",
    "pyexcel==0.7.3",
    "pyexcel-xlsx==0.6.1",
    "pyotp==2.9.0",
    "python-daemon==3.1.2",
    "pyzipper==0.3.6",
    "requests==2.32.5",
    "unicodecsv==0.14.1",
    "user-agents==2.2.0",
    "uvicorn==0.38.0",
    "websockets==15.0.1",
]
